aar lib connect

--- a/.gitignore
+++ b/.gitignore
@@ -271,3 +271,5 @@ fabric.properties
 !/gradle/wrapper/gradle-wrapper.jar
 
 # End of https://www.toptal.com/developers/gitignore/api/android,androidstudio,kotlin,gradle,flutter
+app/libs/gazetracker-release.aar
+app/libs/libgaze-release.aar
