--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,8 +7,8 @@ android {
     compileSdk 32
 
     defaultConfig {
-        applicationId "camp.visual.android.kotlin.sample.seesosample"
-        minSdk 21
+        applicationId "camp.visual.android.kotlin.sample"
+        minSdk 31
         targetSdk 32
         versionCode 1
         versionName "1.0"
@@ -33,11 +33,13 @@ android {
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.7.0'
+    implementation 'androidx.core:core-ktx:1.8.0'
     implementation 'androidx.appcompat:appcompat:1.5.0'
-    implementation 'com.google.android.material:material:1.4.0'
-    implementation 'androidx.preference:preference:1.1.1'
+    implementation 'com.google.android.material:material:1.6.1'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+    implementation files('libs/gazetracker-release.aar')
+    implementation files('libs/libgaze-release.aar')
 }
