--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,6 +51,7 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation 'com.github.creageek:segmented:1.0.0'
+    implementation 'com.mikhaellopez:circleview:1.4.1'
 
     implementation files('libs/gazetracker-release.aar')
     implementation files('libs/libgaze-release.aar')
