--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,17 +41,12 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.5.0'
     implementation 'com.google.android.material:material:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.5.1'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1'
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.5.1'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.5.1'
-    implementation 'androidx.compose.ui:ui-test-manifest:1.2.1'
     implementation 'androidx.window:window:1.0.0'
     testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation 'com.github.creageek:segmented:1.0.0'
     implementation 'com.mikhaellopez:circleview:1.4.1'
+    implementation 'androidx.window:window:1.0.0'
+
 
     implementation files('libs/gazetracker-release.aar')
     implementation files('libs/libgaze-release.aar')
